--- a/package.json
+++ b/package.json
@@ -7,7 +7,22 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\""
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
+    "format:prettierrc": "prettier --config .prettierrc --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
+    "format:prettierrcjson": "prettier --config .prettierrc.json --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
+    "format:all": "bun run format:prettierrc && bun run format:prettierrcjson",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "prettier --config .prettierrc --write",
+      "prettier --config .prettierrc.json --write",
+      "eslint --fix"
+    ],
+    "*.{json,md}": [
+      "prettier --config .prettierrc --write",
+      "prettier --config .prettierrc.json --write"
+    ]
   },
   "dependencies": {
     "@calcom/embed-react": "^1.5.3",
@@ -86,6 +101,8 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.13",
     "tailwindcss": "^4",
