--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
     "embla-carousel-react": "^8.6.0",
     "eventsource-parser": "^3.0.3",
     "gray-matter": "^4.0.3",
